--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         </select>
                     </div>
                     <div class="currency__to-amount">
-                        <input type="text" name="to__amount" id="to__amount" placeholder="Enter Amount">
+                        <input type="text" name="to__amount" id="to__amount" placeholder="result...">
                     </div>
                 </div>
             </form>
